Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notary-api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: "notary-api-static-ip"
    networking.gke.io/managed-certificates: "notary-api-cert"
spec:
  rules:
  # Removing the 'host: app.notarialsolutions.com' line makes this a catch-all rule
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deployment-6-service
            port:
              number: 80
